UI: Fix alignment of watch dropdown on smaller screens

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -801,9 +801,13 @@ button.red:hover path, a.red:hover path {
 }
 .btn-group-settings a {
     color: #2A3744;
+    padding: 10px 15px;
 }
 .btn-group-settings a:hover {
     color: #1fa385;
+}
+.btn-group-settings svg {
+    height: 1em;
 }
 svg {
     vertical-align: middle;
